# voiceover-mage

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.agent/steering/: DEVELOPMENT_PLAN.md  REQUIREMENTS.md  product.md  structure.md  tech.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pr-validation.yml
src/voiceover_mage/: config.py  main.py
src/voiceover_mage/core/: README.md  __init__.py  dashboard_pipeline.py  models.py  service.py  unified_pipeline.py
src/voiceover_mage/extraction/: README.md  __init__.py  base.py
src/voiceover_mage/lib/: __init__.py  database.py  json_types.py
src/voiceover_mage/npc/: models.py  persistence.py  service.py  service_unified.py
src/voiceover_mage/npc/models/: npc.py  (+3 more)
src/voiceover_mage/persistence/: README.md  __init__.py  json_types.py  manager.py  models.py
src/voiceover_mage/utils/: README.md  __init__.py  retry.py  rich_tables.py
tests/: test_main.py
tests/extraction/analysis/: test_image.py  test_intelligent.py  test_synthesizer.py  test_text.py
tests/extraction/voice/: __init__.py  test_elevenlabs_generator.py
tests/integration/: test_unified_pipeline.py
tests/lib/: __init__.py  test_database.py
tests/lib/logging/: __init__.py  test_config.py  test_progress.py
tests/npc/: test_persistence.py
tests/persistence/: test_voice_samples.py
tests/services/voice/: __init__.py  test_elevenlabs_service.py
tests/utils/: test_retry.py
tests/utils/logging/: test_enhanced_progress.py
(+33 files in other folders)
